// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composant IconeStatut > doit rendre l'icône PendingActions pour le statut 'À signer' 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ml-1 inline-block h-5 w-5 css-i4bv87-MuiSvgIcon-root"
  data-testid="PendingActionsIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M17 12c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm1.65 7.35L16.5 17.2V14h1v2.79l1.85 1.85-.7.71zM18 3h-3.18C14.4 1.84 13.3 1 12 1s-2.4.84-2.82 2H6c-1.1 0-2 .9-2 2v15c0 1.1.9 2 2 2h6.11c-.59-.57-1.07-1.25-1.42-2H6V5h2v3h8V5h2v5.08c.71.1 1.38.31 2 .6V5c0-1.1-.9-2-2-2zm-6 2c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
  />
</svg>
`;

exports[`Composant IconeStatut > doit rendre l'icône Update pour le statut 'En traitement' 1`] = `
<svg
  aria-hidden="true"
  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ml-1 inline-block h-5 w-5 css-i4bv87-MuiSvgIcon-root"
  data-testid="UpdateIcon"
  focusable="false"
  viewBox="0 0 24 24"
>
  <path
    d="M21 10.12h-6.78l2.74-2.82c-2.73-2.7-7.15-2.8-9.88-.1-2.73 2.71-2.73 7.08 0 9.79s7.15 2.71 9.88 0C18.32 15.65 19 14.08 19 12.1h2c0 1.98-.88 4.55-2.64 6.29-3.51 3.48-9.21 3.48-12.72 0-3.5-3.47-3.53-9.11-.02-12.58s9.14-3.47 12.65 0L21 3v7.12zM12.5 8v4.25l3.5 2.08-.72 1.21L11 13V8h1.5z"
  />
</svg>
`;

exports[`Composant IconeStatut > ne doit rien rendre pour un statut non reconnu 1`] = `null`;
